# two-way

./: CMakeLists.txt
build-linux/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  first
inc/: linklist.h
src/: linklist.c  main.c
